Fix dark mode so titles aren't black in darkmode

--- a/site/src/assets/base.css
+++ b/site/src/assets/base.css
@@ -84,3 +84,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+p {
+  margin-bottom: 1rem;
+}
